--- a/Basilisk/Chat/Messages/UnifiedMessageRow.xib
+++ b/Basilisk/Chat/Messages/UnifiedMessageRow.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="21701" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="22113.1" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="21701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="22113.1"/>
         <capability name="NSView safe area layout guides" minToolsVersion="12.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,21 +15,21 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <customView identifier="MessageHeaderContent" translatesAutoresizingMaskIntoConstraints="NO" id="Ljp-Zb-bVJ">
-                    <rect key="frame" x="43" y="0.0" width="426" height="60"/>
+                    <rect key="frame" x="43" y="0.0" width="426" height="65"/>
                     <subviews>
                         <stackView identifier="HeaderIdentity" distribution="fill" orientation="horizontal" alignment="firstBaseline" spacing="5" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" verticalCompressionResistancePriority="250" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2Mw-dN-G5U" userLabel="Header Identity Stack View">
-                            <rect key="frame" x="0.0" y="19" width="426" height="41"/>
+                            <rect key="frame" x="0.0" y="19" width="426" height="46"/>
                             <subviews>
-                                <textField horizontalHuggingPriority="255" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Ug7-lf-K9C">
-                                    <rect key="frame" x="-2" y="22" width="160" height="19"/>
+                                <textField focusRingType="none" horizontalHuggingPriority="255" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Ug7-lf-K9C">
+                                    <rect key="frame" x="-2" y="27" width="160" height="19"/>
                                     <textFieldCell key="cell" lineBreakMode="clipping" title="Message Author Name" id="4iU-Ay-aaL">
                                         <font key="font" textStyle="title3" name=".SFNS-Regular"/>
                                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                     </textFieldCell>
                                 </textField>
-                                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="tOi-Zv-130">
-                                    <rect key="frame" x="159" y="23" width="269" height="16"/>
+                                <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="tOi-Zv-130">
+                                    <rect key="frame" x="159" y="28" width="269" height="16"/>
                                     <textFieldCell key="cell" lineBreakMode="clipping" title="Today at 6:49 PM" id="KiU-t4-Gk9">
                                         <font key="font" metaFont="system"/>
                                         <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
@@ -49,7 +49,7 @@
                         <stackView identifier="ContentStack" distribution="fill" orientation="vertical" alignment="leading" spacing="5" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CYr-nE-9y1">
                             <rect key="frame" x="0.0" y="0.0" width="426" height="16"/>
                             <subviews>
-                                <textField horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="xl7-w3-Bpq">
+                                <textField focusRingType="none" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="xl7-w3-Bpq">
                                     <rect key="frame" x="-2" y="0.0" width="178" height="16"/>
                                     <textFieldCell key="cell" selectable="YES" title="This is the message content." allowsEditingTextAttributes="YES" id="OAL-6Y-js7">
                                         <font key="font" metaFont="system"/>
@@ -103,7 +103,7 @@
                 <constraint firstItem="sFu-Iv-gaC" firstAttribute="leading" secondItem="Raf-dt-Q1u" secondAttribute="leading" id="HmO-mL-PkC"/>
                 <constraint firstAttribute="bottom" secondItem="Ljp-Zb-bVJ" secondAttribute="bottom" id="Rv3-cA-pOk"/>
                 <constraint firstItem="Ljp-Zb-bVJ" firstAttribute="leading" secondItem="sFu-Iv-gaC" secondAttribute="trailing" constant="8" symbolic="YES" id="fZt-Pa-dkC"/>
-                <constraint firstItem="Ljp-Zb-bVJ" firstAttribute="top" secondItem="Raf-dt-Q1u" secondAttribute="top" constant="5" identifier="PinHeaderToTop" id="z2W-no-OUV"/>
+                <constraint firstItem="Ljp-Zb-bVJ" firstAttribute="top" secondItem="Raf-dt-Q1u" secondAttribute="top" identifier="PinHeaderToTop" id="z2W-no-OUV"/>
             </constraints>
             <connections>
                 <outlet property="authorLabel" destination="Ug7-lf-K9C" id="6Dq-dW-sOs"/>
