--- a/Basilisk/Chat/Messages/UnifiedMessageRow.xib
+++ b/Basilisk/Chat/Messages/UnifiedMessageRow.xib
@@ -4,6 +4,7 @@
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="22113.1"/>
         <capability name="NSView safe area layout guides" minToolsVersion="12.0"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -53,7 +54,7 @@
                                     <rect key="frame" x="-2" y="0.0" width="178" height="16"/>
                                     <textFieldCell key="cell" selectable="YES" title="This is the message content." allowsEditingTextAttributes="YES" id="OAL-6Y-js7">
                                         <font key="font" metaFont="system"/>
-                                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                        <color key="textColor" name="messageContentColor"/>
                                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                     </textFieldCell>
                                 </textField>
@@ -124,4 +125,9 @@
             <point key="canvasLocation" x="353.5" y="41.5"/>
         </customView>
     </objects>
+    <resources>
+        <namedColor name="messageContentColor">
+            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
