--- a/Cyclone/Preferences/Preferences.storyboard
+++ b/Cyclone/Preferences/Preferences.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="21208.1" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="lZz-ST-Ekk">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="22113.1" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="lZz-ST-Ekk">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="21208.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="22113.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -34,7 +34,7 @@
         <!--Window Title Updating Tab View Controller-->
         <scene sceneID="E0w-jx-4hk">
             <objects>
-                <tabViewController selectedTabViewItemIndex="0" tabStyle="toolbar" id="Czm-sE-UAw" customClass="WindowTitleUpdatingTabViewController" customModule="Basilisk" customModuleProvider="target" sceneMemberID="viewController">
+                <tabViewController selectedTabViewItemIndex="0" tabStyle="toolbar" id="Czm-sE-UAw" customClass="WindowTitleUpdatingTabViewController" customModule="Cyclone" customModuleProvider="target" sceneMemberID="viewController">
                     <tabViewItems>
                         <tabViewItem label="Appearance" identifier="" image="eyeglasses" catalog="system" id="cI3-Iu-Wdg"/>
                         <tabViewItem label="Accounts" image="person.circle" catalog="system" id="Pkm-fR-34B"/>
@@ -74,7 +74,7 @@
         <!--Accounts-->
         <scene sceneID="Vi5-9V-Gj4">
             <objects>
-                <viewController title="Accounts" id="gG5-7a-3RO" customClass="AccountsViewController" customModule="Basilisk" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Accounts" id="gG5-7a-3RO" customClass="AccountsViewController" customModule="Cyclone" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="hz4-uU-TdC">
                         <rect key="frame" x="0.0" y="0.0" width="544" height="363"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -86,7 +86,7 @@
                                         <rect key="frame" x="190" y="49" width="337" height="296"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <view key="contentView" id="Ruq-Zo-SdY">
-                                            <rect key="frame" x="3" y="3" width="331" height="290"/>
+                                            <rect key="frame" x="4" y="5" width="329" height="288"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <subviews>
                                                 <containerView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6c2-Gt-xVg">
@@ -129,7 +129,7 @@
                                                                     <rect key="frame" x="8" y="0.0" width="148" height="24"/>
                                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                     <subviews>
-                                                                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5JW-5L-Cfh">
+                                                                        <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5JW-5L-Cfh">
                                                                             <rect key="frame" x="0.0" y="4" width="148" height="16"/>
                                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                                                             <textFieldCell key="cell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" title="Table View Cell" id="Bbc-Va-P1F">
@@ -238,7 +238,7 @@
         <!--Account Editor Controller-->
         <scene sceneID="zFM-Uf-Ahl">
             <objects>
-                <viewController storyboardIdentifier="accountEditor" id="dAJ-LY-Cbd" customClass="AccountEditorController" customModule="Basilisk" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="accountEditor" id="dAJ-LY-Cbd" customClass="AccountEditorController" customModule="Cyclone" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="Drb-pN-ZWp">
                         <rect key="frame" x="0.0" y="0.0" width="332" height="290"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -247,7 +247,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="332" height="290"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
-                                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UdE-WJ-Hw4">
+                                    <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UdE-WJ-Hw4">
                                         <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <textFieldCell key="cell" lineBreakMode="clipping" alignment="right" title="Token:" id="Vq7-if-VQH">
@@ -256,7 +256,7 @@
                                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                         </textFieldCell>
                                     </textField>
-                                    <secureTextField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Sbq-V8-IOE">
+                                    <secureTextField focusRingType="none" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Sbq-V8-IOE">
                                         <rect key="frame" x="121" y="225" width="190" height="21"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <secureTextFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" placeholderString="theQuiCK_b-Row-nFOxJ.U.MPsOV-ErtHElAzYdOG" drawsBackground="YES" usesSingleLineMode="YES" id="P6Z-iT-vdQ">
@@ -271,7 +271,7 @@
                                             <action selector="finishedEditing:" target="dAJ-LY-Cbd" id="qaK-T3-ItG"/>
                                         </connections>
                                     </secureTextField>
-                                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kiL-6a-9SC">
+                                    <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kiL-6a-9SC">
                                         <rect key="frame" x="18" y="172" width="67" height="16"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <textFieldCell key="cell" lineBreakMode="clipping" title="Base URL:" id="K99-71-eTJ">
@@ -280,7 +280,7 @@
                                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                         </textFieldCell>
                                     </textField>
-                                    <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DV1-8A-2jT">
+                                    <textField focusRingType="none" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DV1-8A-2jT">
                                         <rect key="frame" x="20" y="143" width="291" height="21"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" placeholderString="https://canary.discord.com" drawsBackground="YES" id="M8Y-bk-drc">
@@ -292,7 +292,7 @@
                                             <action selector="finishedEditing:" target="dAJ-LY-Cbd" id="T5V-9n-JJp"/>
                                         </connections>
                                     </textField>
-                                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wwQ-EI-A2L">
+                                    <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wwQ-EI-A2L">
                                         <rect key="frame" x="18" y="119" width="89" height="16"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <textFieldCell key="cell" lineBreakMode="clipping" title="Gateway URL:" id="fNe-m9-pV7">
@@ -301,7 +301,7 @@
                                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                         </textFieldCell>
                                     </textField>
-                                    <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="msv-mn-05H">
+                                    <textField focusRingType="none" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="msv-mn-05H">
                                         <rect key="frame" x="20" y="90" width="291" height="21"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" placeholderString="wss://gateway.discord.gg/?encoding=json&amp;v=9" drawsBackground="YES" id="eIi-sy-xtO">
@@ -313,7 +313,7 @@
                                             <action selector="finishedEditing:" target="dAJ-LY-Cbd" id="2fv-N9-OGF"/>
                                         </connections>
                                     </textField>
-                                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RYD-MI-2km">
+                                    <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RYD-MI-2km">
                                         <rect key="frame" x="18" y="20" width="295" height="28"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <textFieldCell key="cell" title="Don’t change these values unless y’know what you’re doing, m‘kay?" id="wNN-gr-0mJ">
@@ -334,7 +334,7 @@
                                             <font key="font" metaFont="system"/>
                                         </buttonCell>
                                     </button>
-                                    <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NTO-Fb-upK">
+                                    <textField focusRingType="none" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NTO-Fb-upK">
                                         <rect key="frame" x="121" y="251" width="190" height="21"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" placeholderString="Main Account" drawsBackground="YES" id="UY2-N7-Ubw">
@@ -346,7 +346,7 @@
                                             <action selector="finishedEditing:" target="dAJ-LY-Cbd" id="tOH-dA-cPZ"/>
                                         </connections>
                                     </textField>
-                                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="f4H-3k-Zal">
+                                    <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="f4H-3k-Zal">
                                         <rect key="frame" x="18" y="254" width="97" height="16"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <textFieldCell key="cell" lineBreakMode="clipping" alignment="right" title="Account Name:" id="Wqg-Y1-gYn">
@@ -355,7 +355,7 @@
                                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                         </textFieldCell>
                                     </textField>
-                                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dpn-Uj-hHJ">
+                                    <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dpn-Uj-hHJ">
                                         <rect key="frame" x="69" y="228" width="44" height="16"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                         <textFieldCell key="cell" lineBreakMode="clipping" alignment="right" title="Token:" id="fjD-av-frl">
@@ -387,7 +387,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="332" height="290"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nyl-ls-60E">
+                            <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nyl-ls-60E">
                                 <rect key="frame" x="107" y="137" width="120" height="14"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" title="No account selected." id="1k0-Kw-5RD">
@@ -406,8 +406,8 @@
     </scenes>
     <resources>
         <image name="eyeglasses" catalog="system" width="23" height="10"/>
-        <image name="minus" catalog="system" width="14" height="4"/>
+        <image name="minus" catalog="system" width="15" height="4"/>
         <image name="person.circle" catalog="system" width="15" height="15"/>
-        <image name="plus" catalog="system" width="14" height="13"/>
+        <image name="plus" catalog="system" width="15" height="13"/>
     </resources>
 </document>
