--- a/Cyclone/Inspector/Inspectors/HTTPInspector.storyboard
+++ b/Cyclone/Inspector/Inspectors/HTTPInspector.storyboard
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="21219" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="bU7-R8-ocO">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="22113.1" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="bU7-R8-ocO">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="21219"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="22113.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Inspector Controller-->
         <scene sceneID="PEd-7d-5j0">
             <objects>
-                <viewController id="bU7-R8-ocO" customClass="HTTPInspectorController" customModule="Basilisk" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="bU7-R8-ocO" customClass="HTTPInspectorController" customModule="Cyclone" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" translatesAutoresizingMaskIntoConstraints="NO" id="tOy-S4-hL0">
                         <rect key="frame" x="0.0" y="0.0" width="394" height="524"/>
                         <subviews>
@@ -62,7 +62,7 @@
                             <stackView distribution="fill" orientation="horizontal" alignment="baseline" spacing="10" horizontalStackHuggingPriority="250" verticalStackHuggingPriority="250" horizontalCompressionResistancePriority="250" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="P60-aZ-g1v">
                                 <rect key="frame" x="20" y="478" width="354" height="26"/>
                                 <subviews>
-                                    <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" allowsExpansionToolTips="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1rk-3p-H2A">
+                                    <textField focusRingType="none" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" allowsExpansionToolTips="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1rk-3p-H2A">
                                         <rect key="frame" x="-2" y="0.0" width="244" height="26"/>
                                         <textFieldCell key="cell" lineBreakMode="truncatingTail" truncatesLastVisibleLine="YES" selectable="YES" title="GET https://example.com" usesSingleLineMode="YES" id="h6y-N2-k3u">
                                             <font key="font" textStyle="title1" name=".SFNS-Regular"/>
@@ -70,7 +70,7 @@
                                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                         </textFieldCell>
                                     </textField>
-                                    <textField horizontalHuggingPriority="100" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="EZ0-v6-f6P">
+                                    <textField focusRingType="none" horizontalHuggingPriority="100" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="EZ0-v6-f6P">
                                         <rect key="frame" x="248" y="2" width="108" height="16"/>
                                         <textFieldCell key="cell" lineBreakMode="clipping" alignment="right" title="HTTP 201" id="JXZ-Io-na6">
                                             <font key="font" metaFont="system"/>
@@ -112,7 +112,7 @@
         <!--Inspector Body Headers Controller-->
         <scene sceneID="neQ-sN-ZkU">
             <objects>
-                <viewController id="Db4-KQ-lMO" customClass="HTTPInspectorBodyHeadersController" customModule="Basilisk" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="Db4-KQ-lMO" customClass="HTTPInspectorBodyHeadersController" customModule="Cyclone" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="v5O-7w-nvz">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="554"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -146,7 +146,7 @@
                                                             <rect key="frame" x="8" y="0.0" width="149" height="16"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
-                                                                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" allowsExpansionToolTips="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FtR-ad-zWB">
+                                                                <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" allowsExpansionToolTips="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FtR-ad-zWB">
                                                                     <rect key="frame" x="0.0" y="0.0" width="149" height="16"/>
                                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                                                     <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="Ngg-P6-g5r">
@@ -178,7 +178,7 @@
                                                             <rect key="frame" x="174" y="0.0" width="168" height="17"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
-                                                                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" allowsExpansionToolTips="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hdD-N7-Rlv">
+                                                                <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" allowsExpansionToolTips="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hdD-N7-Rlv">
                                                                     <rect key="frame" x="0.0" y="1" width="168" height="16"/>
                                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                                                     <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="UKb-a4-YIR">
@@ -218,7 +218,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableHeaderView>
                             </scrollView>
-                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="FFu-8U-ufW">
+                            <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="FFu-8U-ufW">
                                 <rect key="frame" x="18" y="520" width="81" height="14"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="HTTP Headers" id="JaW-i2-cta">
                                     <font key="font" textStyle="subheadline" name=".SFNS-Regular"/>
@@ -226,7 +226,7 @@
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
-                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="N60-zO-gW8">
+                            <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="N60-zO-gW8">
                                 <rect key="frame" x="18" y="328" width="31" height="14"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="Body" id="cJE-XV-508">
                                     <font key="font" textStyle="subheadline" name=".SFNS-Regular"/>
